@@ -1,3 +1,8 @@
+2007-03-07  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* src/PJ_krovak.c: info string change to report ellipsoidal instead
+	of spherical per email from Markus.
+
 2007-01-31  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* src/pj_datum_set.cpp: Don't parse more datum shift parameters than
